--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
 
         <h3>Comunicações</h3>
 
-        <p>O nosso principal hub de comunicação é o canal #java no Slack do GrudePB - Grupo de Desenvolvedore da Paraíba. Se você ainda  não faz parte do GrudePB, veja como nesse link: <a href="http://grudepb.info/" target="_blank"><strong>http://grudepb.info/</strong></a>. Após entrar no slack do GrudePB, entre no canal #java.</p> 
+        <p>O nosso principal hub de comunicação é o canal #java no Slack do GrudePB - Grupo de Desenvolvedores da Paraíba. Se você ainda  não faz parte do GrudePB, veja como nesse link: <a href="http://grudepb.info/" target="_blank"><strong>http://grudepb.info/</strong></a>. Após entrar no slack do GrudePB, entre no canal #java.</p> 
 
         <h3>Dinâmica</h3>
 
-        <p>A dinâmica da comunidade é a experimentação, vamos ir testando idéias pra ver o que faz a turma se reunir, que é um desafio enorme hoje em dia, apesar de todos sentirem falta de um espaço como esse, onde pessoas com a grande afinidade de trabalhar de algum jeito com o Java estão reunidas se conhecendo.</p>
+        <p>A dinâmica da comunidade é a experimentação, vamos ir testando idéias pra ver o que faz a turma se reunir, que é um desafio enorme hoje em dia, apesar de todos sentirem falta de um espaço como esse, onde pessoas com a grande afinidade de trabalhar de algum jeito com o Java estão reunidas e se conhecendo.</p>
 
         <p>De bate pronto temos os meetups, que podem ser o tradicional encontro presencial ou o mais moderno on-line, com apresentações, meses redondas, mini-apresentações, mas idéias pra coisas diferentes são muito bem-vindas. </p>
 
-        <p>Todos os encontrões serão informados no canal #java, podendo os membros do canal publicarem-nos em suas redes sociais se assim desejarem. </p>
+        <p>Todos as ativdades serão informadas no canal #java, podendo os membros do canal agitar novas e publicarem as correntes em suas redes sociais se assim desejarem. </p>
 
         <p>O projeto inicial é termos 3 meetups, começando em Janeiro. Com o tempo, vamos analisando o engajamento da turma, e revendo a idéia de continuidade. Para uma comunidade funcionar é preciso que as pessoas estejam participando, daí se você quer que isso funcion, por favor, participe, vá para o meetups, dê sua opnião no slack, dê feedbacks, tome a liderança, venha fazer a comunidade acontecer, funcionar, isso é muito rico, em todos os sentidos.</p>
             </div>
