--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
         <p>De bate pronto temos os meetups, que podem ser o tradicional encontro presencial ou o mais moderno on-line, com apresentações, meses redondas, mini-apresentações, mas idéias pra coisas diferentes são muito bem-vindas. </p>
 
-        <p>Todos as ativdades serão informadas no canal #java, podendo os membros do canal agitar novas e publicarem as correntes em suas redes sociais se assim desejarem. </p>
+        <p>Todos as atividades serão informadas no canal #java, podendo os membros do canal agitar novas e publicarem as correntes em suas redes sociais se assim desejarem. </p>
 
-        <p>O projeto inicial é termos 3 meetups, começando em Janeiro. Com o tempo, vamos analisando o engajamento da turma, e revendo a idéia de continuidade. Para uma comunidade funcionar é preciso que as pessoas estejam participando, daí se você quer que isso funcion, por favor, participe, vá para o meetups, dê sua opnião no slack, dê feedbacks, tome a liderança, venha fazer a comunidade acontecer, funcionar, isso é muito rico, em todos os sentidos.</p>
+        <p>O projeto inicial é termos 3 meetups, começando em Janeiro. Com o tempo, vamos analisando o engajamento da turma, e revendo a idéia de continuidade. Para uma comunidade funcionar é preciso que as pessoas estejam participando, daí se você quer que isso funcione, por favor, participe, vá para o meetups, dê sua opnião no slack, dê feedbacks, tome a liderança, venha fazer a comunidade acontecer, funcionar, isso é muito rico, em todos os sentidos.</p>
             </div>
     </div>
 </div>
