Incluindo evidência do 3o meetup.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
 
         <p>Todos as atividades serão informadas no canal #java, podendo os membros do canal agitar novas e publicarem as correntes em suas redes sociais se assim desejarem. </p>
 
-        <p>O projeto inicial é termos 3 meetups, começando em Janeiro. Com o tempo, vamos analisando o engajamento da turma, e revendo a idéia de continuidade. Para uma comunidade funcionar é preciso que as pessoas estejam participando, daí se você quer que isso funcione, por favor, participe, vá para o meetups, dê sua opnião no slack, dê feedbacks, tome a liderança, venha fazer a comunidade acontecer, funcionar, isso é muito rico, em todos os sentidos.</p>
+        <p>O projeto inicial, que começou em Janeiro era termos 3 meetups, isso foi concretizado, demonstrando que a turma esta engajada, participa. Nesse link tem uma evidência disso: 
+            
+            <a href="https://www.youtube.com/watch?v=Zit9BkYHaXc" target="_blank"><i>Meetup Grude4J N. 3</i></a>
+             </p>
+           
+        <p>Agora é continuar participando, indo para o meetups, dando opnião no slack, feedbacks, tomando a liderança mesmo, fazendo a comunidade acontecer, funcionar, isso é muito rico, em todos os sentidos.</p>
             </div>
     </div>
 </div>
