Incluindo info sobre patrocinadores

--- a/index.html
+++ b/index.html
@@ -213,8 +213,19 @@
                                         <h2 class="post-title bold">3o Meetup Grude4J</h2>
                                         <p>
                                             Mais detalhes: Fly do 
-                                            <a href="/images/3oMeetupDaComunidaGrude4J_fly_1080x1080.png" target="_blank">3o Meetup Grude4J</a>.
+                                            <a href="images/3oMeetupDaComunidaGrude4J_fly_1080x1080.png" target="_blank">3o Meetup Grude4J</a>.
                                         </p>
+                                        <div class="post-pre-bottom">
+                                            Patrocinadores: <br>    
+                                            <a href="http://www.pactomais.com.br/" target="_blank"><img src="images/patrocinadores/pactoMais.jpeg"></a>                                            
+                                            <spam style = "white-space:PRE">  </spam>
+                                            <a href="http://www.servicenet.com.br/" target="_blank"><img src="images/patrocinadores/snet.png"> </a>
+                                            <spam style = "white-space:PRE">  </spam>
+                                            <a href="https://www.instagram.com/totcoworking/" target="_blank"><img src="images/patrocinadores/tot.png"></a>
+                                            <spam style = "white-space:PRE">  </spam>
+                                            <a href="https://grude4j.github.io/grude4jsite/" target="_blank"><img src="images/patrocinadores/Grude4J.png"></a>
+                                            <spam style = "white-space:PRE">  </spam>
+                                        </div>
                                         <div class="post-bottom overflow">
                                             <span class="post-date pull-left">28 de Março de 2019</span>
                                         </div>
@@ -241,11 +252,20 @@
                                     </div>
                                 </div>
                                 <div class="post-content overflow">
-                                        <h2 class="post-title bold">2o Meetup Grude4J</h2>
-                                        <p>
-                                            Mais detalhes: Fly do 
-                                            <a href="/images/2Meetup_Grude4J_post_1080x1080.png" target="_blank">2o Meetup Grude4J</a>.
-                                        </p>
+                                    <h2 class="post-title bold">2o Meetup Grude4J</h2>
+                                    <p>
+                                        Mais detalhes: Fly do 
+                                        <a href="images/2Meetup_Grude4J_post_1080x1080.png" target="_blank">2o Meetup Grude4J</a>.
+                                    </p>
+                                    <div class="post-pre-bottom">
+                                        Patrocinadores: <br>
+                                        <a href="http://www.servicenet.com.br/" target="_blank"><img src="images/patrocinadores/snet.png"> </a>
+                                        <spam style = "white-space:PRE">  </spam>
+                                        <a href="https://www.instagram.com/totcoworking/" target="_blank"><img src="images/patrocinadores/tot.png"></a>
+                                        <spam style = "white-space:PRE">  </spam>
+                                        <a href="https://grude4j.github.io/grude4jsite/" target="_blank"><img src="images/patrocinadores/Grude4J.png"></a>
+                                        <spam style = "white-space:PRE">  </spam>
+                                    </div>
                                     <div class="post-bottom overflow">
                                         <span class="post-date pull-left">28 de Fevereiro de 2019</span>
                                     </div>
@@ -279,9 +299,13 @@
                                     <h2 class="post-title bold">1o Meetup Grude4J</h2>
                                     <p>
                                         Mais detalhes: Fly do 
-                                        <a href="/images/Fly_1oMeetup_ComunidadeGrude4J.png" target="_blank">1o Meetup Grude4J</a>.
+                                        <a href="images/Fly_1oMeetup_ComunidadeGrude4J.png" target="_blank">1o Meetup Grude4J</a>.
                                     </p>
-
+                                    <div class="post-pre-bottom">
+                                        Patrocinadores: <br>
+                                        <a href="https://grude4j.github.io/grude4jsite/" target="_blank"><img src="images/patrocinadores/Grude4J.png"></a>
+                                        <spam style = "white-space:PRE">  </spam>
+                                    </div>
                                     <div class="post-bottom overflow">
                                         <span class="post-date pull-left">31 de Janeiro de 2019</span>
                                     </div>
@@ -314,20 +338,28 @@
     <!--/#page-breadcrumb-->
 
     <div id="carousel-container">
-        <div class="container">
-            <div class="video-slider">
-                <!-- SLIDE 1 -->
-                <div class="slide">
-                    <div style="position:relative;height:0;padding-bottom:56.28%"><iframe src="https://www.youtube.com/embed/YE7VzlLtp-4?ecver=2" style="position:absolute;width:100%;height:100%;left:0" width="640" height="360" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-                </div>
-                <!-- SLIDE 2 -->
-                <div class="slide">
-                    <div style="position:relative;height:0;padding-bottom:56.28%"><iframe src="https://www.youtube.com/embed/EngW7tLk6R8?ecver=2" style="position:absolute;width:100%;height:100%;left:0" width="640" height="360" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-                </div>
-                <!-- END OF SLIDES -->
-                <div class="slide-arrow left"></div>
-                <div class="slide-arrow right"></div>
+
+        <div class="video-slider container">
+            <!-- SLIDE 1 -->
+            <div class="slide">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Zit9BkYHaXc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
+            <!-- SLIDE 2 -->
+            <div class="slide">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Zit9BkYHaXc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <!-- SLIDE 3 -->
+            <div class="slide">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Zit9BkYHaXc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>                
+            <!-- END OF SLIDES -->
+            
+            <a class="left carousel-control hidden-xs" href="#carousel-example-generic" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <a class="right carousel-control hidden-xs" href="#carousel-example-generic" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
         </div>
     </div>
     <!--/#carousel-container-->
