--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
                     <div class="col-sm-7 col-sm-offset-1 align-right wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
                         <h2>Objetivo</h2>
-                        <p>Criar um espaço receptivo e inclusivo onde o eco-sistema Java seja vez mais visível aos participantes,
+                        <p>Criar um espaço receptivo e inclusivo onde o eco-sistema Java seja cada vez mais visível aos participantes,
                            priorizando a interação entre as pessoas, 
                             no sentido de que as pessoas presentes venham a se conhecer, 
                             trocar idéias, chegar até mesmo a se tornarem bons colegas e amigos. 
@@ -118,7 +118,7 @@
                         <h2>Comunicações</h2>
                         <p>O nosso principal hub de comunicação é o canal #java no Slack do GrudePB - Grupo de Desenvolvedores da Paraíba.</p>                        
                         <p>Saiba como fazer parte do GrudePB nesse link: <a href="http://grudepb.info/" target="_blank">
-                            <strong>http://grudepb.info/</strong></a>. Após entrar no slack do GrudePB, entre no canal #java.</p> 
+                            <strong>http://grudepb.info/</strong></a>. <b>Após entrar no slack do GrudePB, entre no canal #java.</b></p> 
                         
 
                     </div>
@@ -327,7 +327,7 @@
                     <div class="row">
                         <div class="action">
                             <div class="col-sm-12">
-                                <h1 class="title">Membros</h1>
+                                <h1 class="title">Membros (área em construção...)</h1>
                             </div>
                         </div>
                     </div>
