--- a/index.html
+++ b/index.html
@@ -183,8 +183,18 @@
                                 <div class="post-content overflow">
                                     <h2 class="post-title bold">4o Meetup Grude4J</h2>
                                     <p>
-                                        Esse meetup já esta agendado, ocorrerá dia 25.
+                                        Mais detalhes: Fly do 
+                                        <a href="outros/materia_divulgação/4oMeetup/fly/4oMeetupDaComunidaGrude4J_fly_1080x1080.png" target="_blank">4o Meetup Grude4J</a>.
                                     </p>
+                                    <div class="post-pre-bottom">
+                                        Patrocinadores: <br>    
+                                        <a href="http://www.servicenet.com.br/" target="_blank"><img src="images/patrocinadores/snet.png"> </a>
+                                        <spam style = "white-space:PRE">  </spam>
+                                        <a href="https://www.instagram.com/totcoworking/" target="_blank"><img src="images/patrocinadores/tot.png"></a>
+                                        <spam style = "white-space:PRE">  </spam>
+                                        <a href="https://grude4j.github.io/grude4jsite/" target="_blank"><img src="images/patrocinadores/Grude4J.png"></a>
+                                        <spam style = "white-space:PRE">  </spam>
+                                    </div>
                                     <div class="post-bottom overflow">
                                         <span class="post-date pull-left">25 de Abril de 2019</span>
                                     </div>
