--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <A name="homeSecao">
                 <div class="row">
                     <div class="col-sm-12 overflow">
-                    <div class="social-icons pull-right">
+                        <div class="social-icons pull-right">
                             <ul class="nav nav-pills">
                                 <li><a href="https://www.facebook.com/grude4j" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="https://twitter.com/Grude4J" target="_blank"><i class="fa fa-twitter"></i></a></li>
@@ -421,7 +421,7 @@
                     <div class="row">
                         <div class="action">
                             <div class="col-sm-12">
-                                <h1 class="title">Mercado (área em construção...)</h1>
+                                <h1 class="title">Mercado</h1>
                             </div>
                         </div>
                     </div>
@@ -433,10 +433,14 @@
 
     <div id="container">
         <div class="row">
-            <div class="col-sm-12">
-                <img src="images/mapaParaiba.png" style="display: block;
-                margin-left: auto;
-                margin-right: auto;" alt="mercado"  class="img-responsive" >
+            <div class="single-features" style="padding-top: 0;padding-bottom: 0;">
+                <div class="col-sm-2 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
+                </div>
+                <div class="col-sm-8 offset-sm-2">
+                    <iframe width="100%" height="720px" src="https://flauberjp.github.io/IT-Companies-Map/"></iframe> 
+                </div>
+                <div class="col-sm-2 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
+                </div>
             </div>
         </div>
     </div>
