--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                 <div class="col-sm-2 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
                 </div>
                 <div class="col-sm-8 offset-sm-2">
-                    <iframe width="100%" height="720px" src="https://flauberjp.github.io/IT-Companies-Map/?caracteristicas=java&ecosistemas=Empresas de TI de João Pessoa"></iframe> 
+                    <iframe width="100%" height="720px" src="https://flauberjp.github.io/IT-Companies-Map/?caracteristicas=java&ecosistemas=Empresas de TI de João Pessoa&menuVisivel=false"></iframe> 
                 </div>
                 <div class="col-sm-2 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
                 </div>
