Ajustando a parte dos membros

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="css/lightbox.css" rel="stylesheet"> 
 	<link href="css/main.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
+    <link href="css/team.css" rel="stylesheet">
+
 
 
     <!--[if lt IE 9]>
@@ -387,29 +389,35 @@
     </section>
     <!--/#page-breadcrumb-->
 
-    <div id="carousel-container">
+    <div id="team-section" class="section">
+        <div class="section-wrapper">
+            <div id="team-section-content" class="section-content">
+                <div class="container">
+                    <div class="row team-row">
+                        <div class="col-12 col-lg-10 offset-lg-1">
+                            <div class="team-images-row row">
+                                <div class="team-member-container col-6 col-sm-3">
+                                    <div class="team-member-color-layer"> </div>
+                                    <div class="team-member-desc">
+                                    <span class="team-member-name">Membro 001</span>
+                                    <span class="team-member-job">Cargo</span>
+                                    </div>
+                                    <img class="team-member-img" src="https://via.placeholder.com/150" width="100%" height="100%"/>
+                                </div>
 
-        <div class="video-slider container">
-            <!-- SLIDE 1 -->
-            <div class="slide">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Zit9BkYHaXc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <div class="team-member-container col-6 col-sm-3">
+                                    <div class="team-member-color-layer"> </div>
+                                    <div class="team-member-desc">
+                                    <span class="team-member-name">Membro 002</span>
+                                    <span class="team-member-job">Cargo 002</span>
+                                    </div>
+                                    <img class="team-member-img" src="https://via.placeholder.com/150" width="100%" height="100%"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!-- SLIDE 2 -->
-            <div class="slide">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Zit9BkYHaXc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <!-- SLIDE 3 -->
-            <div class="slide">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Zit9BkYHaXc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>                
-            <!-- END OF SLIDES -->
-            
-            <a class="left carousel-control hidden-xs" href="#carousel-example-generic" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-            </a>
-            <a class="right carousel-control hidden-xs" href="#carousel-example-generic" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a>
         </div>
     </div>
     <!--/#carousel-container-->
