Referênciando material do meetup n. 5

--- a/index.html
+++ b/index.html
@@ -189,12 +189,17 @@
                                     <div class="post-content overflow">
                                         <h2 class="post-title bold">5o Meetup Grude4J</h2>
                                         <p>
-                                            Mais detalhes: Fly a ser lançado
+                                            Mais detalhes: Fly do 
+                                            <a href="outros/materia_divulgação/5oMeetup/5oMeetupDaComunidaGrude4J_fly_1080x1080.png" target="_blank">5o Meetup Grude4J</a>.
                                         </p>
                                         <div class="post-pre-bottom">
                                             Patrocinadores: <br>    
-                                            a definir
-                                            
+                                            <a href="http://www.servicenet.com.br/" target="_blank"><img src="images/patrocinadores/snet.png"> </a>
+                                            <spam style = "white-space:PRE">  </spam>
+                                            <a href="https://www.instagram.com/totcoworking/" target="_blank"><img src="images/patrocinadores/tot.png"></a>
+                                            <spam style = "white-space:PRE">  </spam>
+                                            <a href="https://grude4j.github.io/grude4jsite/" target="_blank"><img src="images/patrocinadores/Grude4J.png"></a>
+                                            <spam style = "white-space:PRE">  </spam>
                                         </div>
                                         <div class="post-bottom overflow">
                                             <span class="post-date pull-left">30 de Maio de 2019</span>
