--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12">
-                        <img src="images/Grude4JLogo.jpg" style="display: block;
+                    <img src="images/Grude4JLogo.png" style="display: block;
                         margin-left: auto;
-                        margin-right: auto;" alt="logo"  class="img-responsive" >
-                    </div>
+                        margin-right: auto;
+                        width: 100%;
+                        max-width: 425px" alt="logo"  class="img-responsive" >
                 </div>
                 <div class="row">
                     <div class="col-sm-12 text-center">
