Adicionando seção Iniciativas

--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <a href="#sobreSecao"   onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Home   </a>
-                        <a href="#sobreSecao"   onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Sobre  </a>
-                        <a href="#eventosSecao" onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Eventos</a>
-                        <a href="#membrosSecao" onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Membros</a>
-                        <a href="#mercadoSecao" onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Mercado</a>
-                        <a href="#contatoSecao" onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Contato</a>
+                        <a href="#sobreSecao"       onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Home        </a>
+                        <a href="#sobreSecao"       onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Sobre       </a>
+                        <a href="#eventosSecao"     onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Eventos     </a>
+                        <a href="#membrosSecao"     onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Membros     </a>
+                        <a href="#mercadoSecao"     onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Mercado     </a>
+                        <a href="#iniciativasSecao" onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Iniciativas </a>
+                        <a href="#contatoSecao"     onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Contato     </a>
                     </div>
                 </div>
             </A>
@@ -444,6 +445,33 @@
                 </div>
                 <div class="col-sm-2 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <section id="page-breadcrumb">
+        <div class="vertical-center">
+            <div class="container">
+                <A id="iniciativasSecao" name="iniciativasSecao">
+                    <div class="row">
+                        <div class="action">
+                            <div class="col-sm-12">
+                                <h1 class="title">Iniciativas</h1>
+                            </div>
+                        </div>
+                    </div>
+                </A>
+            </div>
+        </div>
+    </section>
+
+    <div id="container">
+
+        <div class="row">
+            <div class="col-sm-12 text-center bottom-separator">
+                <BR>
+                Aguardem...
+                <BR><BR>
             </div>
         </div>
     </div>
