incluindo caracteristica 'cursos ensinando java'

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 <div class="col-sm-2 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
                 </div>
                 <div class="col-sm-8 offset-sm-2">
-                    <iframe width="100%" height="720px" src="https://flauberjp.github.io/ecossistema-dist/?caracteristicas=java&ecosistemas=Empresas de TI de João Pessoa&menuVisivel=true"></iframe> 
+                    <iframe width="100%" height="720px" src="https://flauberjp.github.io/ecossistema-dist/?caracteristicas=java,cursos ensinando java&ecosistemas=Empresas de TI de João Pessoa&menuVisivel=true"></iframe> 
                 </div>
                 <div class="col-sm-2 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
                 </div>
