Atualizando seção Iniciativas

--- a/index.html
+++ b/index.html
@@ -479,9 +479,12 @@
     <div id="container">
 
         <div class="row">
-            <div class="col-sm-12 text-center bottom-separator">
+            <div class="col-sm-12 text-left bottom-separator">
                 <BR>
-                Aguardem...
+                <ul style="list-style-type: circle;">
+                    <li>29/05/2019: <a href="https://www.youtube.com/playlist?list=PLcRcTKb6YuIjTKD7fs92w7Yz0WBmvX6tT" target="_blank">Get to know Grude4J people, 1a temporada</a>;</li>
+                    <li>21/05/2019: <a href="https://www.linkedin.com/pulse/o-ecossistema-de-programa%25C3%25A7%25C3%25A3o-java-na-cidade-jo%25C3%25A3o-pessoa-flauber" target="_blank">O ecossistema de programação Java na cidade de João Pessoa</a>.</li>
+                </ul>
                 <BR><BR>
             </div>
         </div>
