Adicionando link para a página no facebook

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <div class="social-icons pull-right">
                             <ul class="nav nav-pills">
                                 <li><a href="https://www.youtube.com/channel/UCPeJeVKO9hgVdYPq3IT75Kg" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                                <li><a href="https://www.facebook.com/Grude4J-304563140455709/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             </ul>
                         </div> 
                     </div>
