Adicionando link para iniciativa Grupo de Estudo

--- a/index.html
+++ b/index.html
@@ -545,6 +545,7 @@
             <div class="col-sm-12 text-left bottom-separator">
                 <BR>
                 <ul style="list-style-type: circle;">
+                    <li>26/06/2019: <a href="https://docs.google.com/document/d/1vFe560D_7ZYoiRlNh44Kyorr5TMqFQXx44okGEIlVMA/edit?usp=sharing" target="_blank">Grupo de Estudo Java 1Z0-808</a>;</li>
                     <li>29/05/2019: <a href="https://www.youtube.com/playlist?list=PLcRcTKb6YuIjTKD7fs92w7Yz0WBmvX6tT" target="_blank">Get to know Grude4J people, 1a temporada</a>;</li>
                     <li>21/05/2019: <a href="https://www.linkedin.com/pulse/o-ecossistema-de-programa%25C3%25A7%25C3%25A3o-java-na-cidade-jo%25C3%25A3o-pessoa-flauber" target="_blank">O ecossistema de programação Java na cidade de João Pessoa</a>.</li>
                 </ul>
