Adicionando slides disponiveis do 6o meetup

--- a/index.html
+++ b/index.html
@@ -210,6 +210,17 @@
                                                 ( <a href="outros/materia_divulgação/6oMeetup/6oMeetupDaComunidaGrude4J_fly_600x600_palestrantes_forInsta.jpg" target="_blank">versão Instagram</a> );
                                             </li>
                                             <li> 
+                                                Slides:
+                                                <ul style="list-style-type:disc;">
+                                                    <li> 
+                                                        <a href="outros/materia_divulgação/6oMeetup/slides/palestra_grude4j_janaina.pdf" target="_blank">Monitoramento de API com Zabbix</a> by <a href="https://www.linkedin.com/in/janaina-militao/" target="_blank">Janaina Militão</a>;
+                                                    </li>
+                                                    <li> 
+                                                        Microserviços e Orquestração de Containers by <a href="https://www.linkedin.com/in/gustavosavio/" target="_blank">Gustavo Sávio</a>;
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                            <li> 
                                                 <a href="https://docs.google.com/presentation/d/1GkdsBTiTTg1socEcDVYXM1Uec4-OPrvVVlVU1CGgo6M/edit?usp=sharing" target="_blank">Plano de divulgação do evento</a>.
                                             </li>
                                         </ul>
