Adicionando convites e atualizando info do 7o meetup

--- a/index.html
+++ b/index.html
@@ -195,7 +195,27 @@
                                             Mais detalhes: 
                                             <ul style="list-style-type:disc;">
                                                 <li> 
-                                                    Aguardem...
+                                                    <a href="https://www.sympla.com.br/grude4j-meetup-n-7__585005" target="_blank">Inscrição para o 7o Meetup</a>;
+                                                </li>
+                                                <li> 
+                                                    <a href="outros/materia_divulgação/7oMeetup/7oMeetupDaComunidaGrude4J_fly_1080x1080.jpg" target="_blank">Fly do 7o Meetup Grude4J</a>;
+                                                </li>
+                                                <li> 
+                                                    <a href="outros/materia_divulgação/7oMeetup/7oMeetupDaComunidaGrude4J_fly_1080x1080_palestrantes.jpg" target="_blank">Sobre os palestrantes</a>;
+                                                </li>
+                                                <li> 
+                                                    Slides:
+                                                    <ul style="list-style-type:disc;">
+                                                        <li> 
+                                                            Aplicativo Preço da Hora: tecnologias para extração de conhecimento de Big Data by <a href="https://www.linkedin.com/in/alessio-almeida-24b25282/" target="_blank">Aléssio Tony</a>;
+                                                        </li>
+                                                        <li> 
+                                                            Integração Continua de uma aplicação Java usando Jenkins by <a href="https://www.linkedin.com/in/aeciopires/" target="_blank">Aécio Pires</a>;
+                                                        </li>
+                                                    </ul>
+                                                </li>
+                                                <li> 
+                                                    <a href="https://docs.google.com/presentation/d/1mrMQIvO8OG6El4Y-52A6ze_hYdJVYsxpp7NuQAudF8o/edit?usp=sharing" target="_blank">Plano de divulgação do evento</a>.
                                                 </li>
                                             </ul>
                                         </p>
