Adicionando LinkedIn Shareable button

--- a/index.html
+++ b/index.html
@@ -190,7 +190,11 @@
                                         </div>
                                     </div>
                                     <div class="post-content overflow">
-                                        <h2 class="post-title bold">Vem ai o "7o Meetup Grude4J"</h2>
+                                        <h2 class="post-title bold">
+                                            Vem ai o "7o Meetup Grude4J"
+                                            <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
+                                            <script type="IN/Share" data-url="https://www.youtube.com/watch?v=-ZPzERNAJBo"></script>
+                                        </h2>
                                         <p>
                                             Mais detalhes: 
                                             <ul style="list-style-type:disc;">
